[package]
name = "zlib-bench"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
libz-sys = { version = "1.1.8", default-features = false, features = ["static"] }
libz-ng-sys = { version = "1.1.8" }
libz-rs-sys = { git = "https://github.com/memorysafety/zlib-rs.git", branch = "allocator-feature-flag", default-features = false, features = ["rust-allocator"] }
cloudflare-zlib-sys = { version = "0.3.0" }
miniz_oxide = { version = "0.7.1", default-features = false, features = ["with-alloc"] }
